# QingLongClaw

./: CMakeLists.txt  README.md  tmp_frontend_script.js
build-test-mismatch/: CMakeCache.txt  Makefile  cmake_install.cmake  pipixia
include/QingLongClaw/: agent.h  auth.h  cli.h  config.h  cron_service.h  gateway.h  http_client.h  model_preset.h  provider.h  session_store.h  skills.h  tools.h  util.h  version.h
scripts/: build_linux_aarch64.sh  build_linux_x86_64.sh  build_native.sh  sanitize-config.sh
src/: agent.cpp  auth.cpp  cli.cpp  config.cpp  cron_service.cpp  gateway.cpp  http_client.cpp  main.cpp  model_preset.cpp  provider.cpp  session_store.cpp  skills.cpp  tools.cpp  util.cpp  version.cpp
templates/workspace/: AGENT.md  IDENTITY.md  SOUL.md
templates/workspace/memory/: MEMORY.md
templates/workspace/skills/: EVOLUTION.md  PROJECT_LOG.md  SKILLS.md  context_policy.json  knowledge_urls.txt
templates/workspace/skills/lobster-core/: SKILL.md
toolchains/: linux-aarch64-gcc.cmake  linux-x86_64-gcc.cmake
